smart_room/build/log/idf_py_stdout_output_4232
[1/12] Linking C static library esp-idf\lcd\liblcd.a
[2/12] Linking C static library esp-idf\App\libApp.a
[3/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\App\ESP32\smart_room\build\bootloader\esp-idf\esptool_py && D:\App\ESP32\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe D:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/App/ESP32/smart_room/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[4/10] Building C object esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj
FAILED: esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj 
ccache D:\App\ESP32\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/App/ESP32/smart_room/build/config -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/driver/gpio/include -ID:/App/ESP32/smart_room/user/dht22 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/driver/deprecated -ID:/App/ESP32/smart_room/user/lcd -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/driver/i2c/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel-SMP/include/freertos -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/newlib/platform_include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/include/freertos -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/config/xtensa/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/freertos/esp_additions/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/include/soc/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_hw_support/port/esp32/. -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/heap/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/log/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/soc/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/soc/esp32/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/hal/platform_port/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/hal/esp32/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/hal/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/include/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_rom/esp32 -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_common/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/soc -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/esp_system/port/include/private -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/esp32/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/xtensa/deprecated_include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/include/apps/sntp -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/lwip/src/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/freertos/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/arch -ID:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/sys -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/App/ESP32/smart_room=. -fmacro-prefix-map=D:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj -MF esp-idf\dht22\CMakeFiles\__idf_dht22.dir\dht22.c.obj.d -o esp-idf/dht22/CMakeFiles/__idf_dht22.dir/dht22.c.obj -c D:/App/ESP32/smart_room/user/dht22/dht22.c
In file included from D:/App/ESP32/smart_room/user/dht22/dht22.c:5:
D:/App/ESP32/Espressif/frameworks/esp-idf-v5.2.1/components/driver/deprecated/driver/timer.h:16:2: warning: #warning "legacy timer group driver is deprecated, please migrate to driver/gptimer.h" [-Wcpp]
   16 | #warning "legacy timer group driver is deprecated, please migrate to driver/gptimer.h"
      |  ^~~~~~~
D:/App/ESP32/smart_room/user/dht22/dht22.c: In function 'Dht22_getParan':
D:/App/ESP32/smart_room/user/dht22/dht22.c:174:22: error: 'sprintf' may write a terminating nul past the end of the destination [-Werror=format-overflow=]
  174 |     sprintf(Temp, "%d", (uint16_t)DHT22_value.param.Temp);
      |                      ^
D:/App/ESP32/smart_room/user/dht22/dht22.c:174:5: note: 'sprintf' output between 2 and 6 bytes into a destination of size 5
  174 |     sprintf(Temp, "%d", (uint16_t)DHT22_value.param.Temp);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/App/ESP32/smart_room/user/dht22/dht22.c:186:22: error: 'sprintf' may write a terminating nul past the end of the destination [-Werror=format-overflow=]
  186 |     sprintf(Humi, "%d", (uint16_t)DHT22_value.param.Humi);
      |                      ^
D:/App/ESP32/smart_room/user/dht22/dht22.c:186:5: note: 'sprintf' output between 2 and 6 bytes into a destination of size 5
  186 |     sprintf(Humi, "%d", (uint16_t)DHT22_value.param.Humi);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
